--- a/src/app/pages/dte/mission-builder/edit/dialog-push-notif-edit/dialog-push-notif-edit.component.html
+++ b/src/app/pages/dte/mission-builder/edit/dialog-push-notif-edit/dialog-push-notif-edit.component.html
@@ -3,26 +3,28 @@
 
   <mat-dialog-content>
 
-  <mat-form-field style="width: 100%">
-    <mat-select formControlName="notification_id" placeholder="Pilih Push Notification" id="notification_id" #singleSelect>
-      <ngx-mat-select-search [formControl]="filterPushNotif" [placeholderLabel]="'Cari Push Notification...'"
-        [noEntriesFoundLabel]="'Tidak ada Push Notification yang ditemukan'"></ngx-mat-select-search>
-      <mat-option *ngFor="let item of filteredPushNotif | async" [value]="item.id">
-        {{item.title}}
-      </mat-option>
-    </mat-select>
-  </mat-form-field>
+    <mat-form-field style="width: 100%">
+      <mat-select formControlName="notification_id" placeholder="Pilih Push Notification" id="notification_id"
+        #singleSelect>
+        <ngx-mat-select-search [formControl]="filterPushNotif" [placeholderLabel]="'Cari Push Notification...'"
+          [noEntriesFoundLabel]="'Tidak ada Push Notification yang ditemukan'"></ngx-mat-select-search>
+        <mat-option *ngFor="let item of filteredPushNotif | async" [value]="item.id">
+          {{item.title}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
 
-  <mat-form-field style="width: 100%">
-    <input matInput formControlName="time" placeholder="Jam Terbit" [ngxTimepicker]="jam_terbit" [format]="24" readonly/>
-    <mat-icon matSuffix>access_time</mat-icon>
-    <ngx-material-timepicker #jam_terbit></ngx-material-timepicker>
-  </mat-form-field>
+    <mat-form-field style="width: 100%">
+      <input matInput formControlName="time" placeholder="Jam Terbit" [ngxTimepicker]="jam_terbit" [format]="24"
+        readonly />
+      <mat-icon matSuffix>access_time</mat-icon>
+      <ngx-material-timepicker #jam_terbit></ngx-material-timepicker>
+    </mat-form-field>
 
   </mat-dialog-content>
   <br><br>
   <mat-dialog-actions>
-    <button mat-raised-button color="success" type="submit">Simpan</button>
+    <button mat-raised-button color="success" type="submit" [disabled]="data && data.isDetail">Simpan</button>
     <button mat-raised-button color="warn" type="button" (click)="dialogRef.close()">Batal</button>
   </mat-dialog-actions>
 
