--- a/src/app/pages/dte/mission-builder/edit/dialog-waktu-tunggu-edit/dialog-waktu-tunggu-edit.component.html
+++ b/src/app/pages/dte/mission-builder/edit/dialog-waktu-tunggu-edit/dialog-waktu-tunggu-edit.component.html
@@ -4,7 +4,7 @@
   <mat-dialog-content>
 
     <mat-form-field style="width: 100%">
-      <input matInput type="text" (keypress)="numberOnly($event)" formControlName="time" placeholder="Waktu Tunggu"/>
+      <input matInput type="text" (keypress)="numberOnly($event)" formControlName="time" placeholder="Waktu Tunggu" />
     </mat-form-field>
 
     <mat-form-field style="width: 100%">
@@ -18,7 +18,7 @@
   </mat-dialog-content>
   <br><br>
   <mat-dialog-actions>
-    <button mat-raised-button color="success" type="submit">Simpan</button>
+    <button mat-raised-button color="success" type="submit" [disabled]="data && data.isDetail">Simpan</button>
     <button mat-raised-button color="warn" type="button" (click)="dialogRef.close()">Batal</button>
   </mat-dialog-actions>
 
