--- a/src/app/pages/settings/tingkat-fitur/tree/tingkat-fitur-tree.component.html
+++ b/src/app/pages/settings/tingkat-fitur/tree/tingkat-fitur-tree.component.html
@@ -8,7 +8,7 @@
     <mat-nested-tree-node *matTreeNodeDef="let node; when: hasNestedChild">
         <li [class.tingkat-fitur-parent]="node.level === 0">
             <div class="mat-tree-node">
-                <button mat-icon-button matTreeNodeToggle [attr.aria-label]="'toggle ' + node.filename">
+                <button mat-icon-button matTreeNodeToggle [attr.aria-label]="'toggle ' + node.item">
                     <mat-icon class="mat-icon-rtl-mirror">
                         {{nestedTreeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
                     </mat-icon>
