--- a/src/app/pages/b2b-voucher-inject/create/b2b-voucher-inject-create.component.html
+++ b/src/app/pages/b2b-voucher-inject/create/b2b-voucher-inject-create.component.html
@@ -170,7 +170,7 @@
               <!-- <div fxLayout="row">
                 <div fxFlex="60"></div>
                 <div fxFlex="20">
-                  <div fxLayout="column" *ngIf="listStatuses.length > 0 && permission.b2b_approval">
+                  <div fxLayout="column" *ngIf="listStatuses.length > 0 && permission.approval">
                     <button *ngFor="let item of listStatuses" mat-raised-button type="button"
                       [ngClass]="item.value === 'rejected' ? 'confirmation-button' : 'mat-green-800-bg'" fxFlex="20"
                       style="margin-bottom: 10px;" (click)="takeAction(item)">
@@ -205,7 +205,7 @@
             </form>
           </div>
         </mat-tab>
-        <mat-tab label="Panel Mitra" *ngIf="(isDetail || isEdit) && this.formDetilVoucher.get('opsiVoucher').value !== 'src-catalogue'">
+        <mat-tab label="Panel Mitra" *ngIf="(isDetail || isEdit) && formDetilVoucher.get('opsiVoucher').value !== 'src-catalogue'">
           <app-panel-mitra-voucher (refreshDetail)="onRefreshDetail()" [statusVoucher]="detailVoucher.status"
             [permissions]="permission">
           </app-panel-mitra-voucher>
@@ -216,7 +216,7 @@
               <div class='import-export-bar p-16' fxLayoutGap="20px" fxLayout="row wrap" fxLayoutAlign="end center">
                 <div class="button-row">
                   <button mat-flat-button style="width: 160px" color="white" (click)="importRetailer()"
-                    *ngIf="!this.permission.b2b_approval">
+                    *ngIf="permission.buat || permission.ubah">
                     <mat-icon>vertical_align_bottom</mat-icon> Import XLS
                   </button>
                 </div>
