--- a/src/app/pages/b2b-voucher-inject/panel-mitra-voucher/panel-mitra-voucher.component.html
+++ b/src/app/pages/b2b-voucher-inject/panel-mitra-voucher/panel-mitra-voucher.component.html
@@ -3,7 +3,7 @@
     <div class='import-export-bar p-16' fxLayoutGap="20px" fxLayout="row wrap" fxLayoutAlign="end center">
       <div class="button-row">
         <button mat-flat-button style="width: 160px" color="white" (click)="importMitra()"
-          *ngIf="!this.permissions.b2b_approval">
+          *ngIf="permissions.buat || permissions.ubah">
           <mat-icon>vertical_align_bottom</mat-icon> Import XLS
         </button>
       </div>
