fixing menu company bin and panel

--- a/src/app/pages/virtual-account/virtual-account-bin/create/virtual-account-bin-create.component.html
+++ b/src/app/pages/virtual-account/virtual-account-bin/create/virtual-account-bin-create.component.html
@@ -1,12 +1,12 @@
 <div class="page-layout simple fullwidth" fxLayout="column">
   <!-- HEADER -->
-  <page-content-header [contentTitle]="'Buat Perusahaan'"></page-content-header>
+  <page-content-header [contentTitle]="'Buat BIN'"></page-content-header>
   <!-- / HEADER -->
 
   <div class="content p-24">
     <div class="ayo-main-wrapper mat-white-bg" fxLayout="column">
       <div fxLayout="row" fxLayoutAlign="space-between center">
-        <h2 class="">Buat Perusahaan</h2>
+        <h2 class="">Buat BIN</h2>
       </div>
       <div class="ayo-middle py-24" fxLayout="column">
         <form autocomplete="off" [formGroup]="formBin">
