--- a/src/app/pages/virtual-account/virtual-account-bin/edit/virtual-account-bin-edit.component.html
+++ b/src/app/pages/virtual-account/virtual-account-bin/edit/virtual-account-bin-edit.component.html
@@ -1,12 +1,12 @@
 <div class="page-layout simple fullwidth" fxLayout="column">
   <!-- HEADER -->
-  <page-content-header [contentTitle]="(isDetail ? 'Detil' : 'Ubah') + ' Perusahaan'"></page-content-header>
+  <page-content-header [contentTitle]="(isDetail ? 'Detil' : 'Ubah') + ' BIN'"></page-content-header>
   <!-- / HEADER -->
 
   <div class="content p-24">
     <div class="ayo-main-wrapper mat-white-bg" fxLayout="column">
       <div fxLayout="row" fxLayoutAlign="space-between center">
-        <h2 class="">{{ isDetail ? 'Detil' : 'Ubah' }} Perusahaan</h2>
+        <h2 class="">{{ isDetail ? 'Detil' : 'Ubah' }} BIN</h2>
       </div>
       <div class="ayo-middle py-24" fxLayout="column">
         <form autocomplete="off" [formGroup]="formBin">
