--- a/src/app/pages/virtual-account/virtual-account-company/create/virtual-account-company-create.component.html
+++ b/src/app/pages/virtual-account/virtual-account-company/create/virtual-account-company-create.component.html
@@ -13,7 +13,7 @@
           <div fxLayout="row">
             <mat-form-field fxFlex="45" class="is-light form-primary">
               <mat-select formControlName="name" placeholder="Nama Bank">
-                <mat-option *ngFor="let item of listBanks" [value]="item.code">{{item.name}}</mat-option>
+                <mat-option *ngFor="let item of listBanks" [value]="item.code_bank">{{item.name}}</mat-option>
               </mat-select>
               <mat-error
                 *ngIf="formCompany.controls['name'].hasError('required') && formCompany.controls['name'].touched">
