--- a/src/app/pages/virtual-account/virtual-account-panel/create/virtual-account-panel-create.component.html
+++ b/src/app/pages/virtual-account/virtual-account-panel/create/virtual-account-panel-create.component.html
@@ -1,6 +1,6 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header [contentTitle]="'Buat Panel Pojok Modal'">
+  <page-content-header [contentTitle]="'Buat Panel Virtual Account'">
   </page-content-header>
   <!-- / HEADER -->
   <div class="content p-24">
