--- a/src/app/pages/virtual-account/virtual-account-panel/create/virtual-account-panel-mitra/virtual-account-panel-mitra.component.html
+++ b/src/app/pages/virtual-account/virtual-account-panel/create/virtual-account-panel-mitra/virtual-account-panel-mitra.component.html
@@ -5,7 +5,7 @@
         <div fxLayout="row wrap" fxLayoutAlign="start" fxFlex="89">
           <mat-form-field fxFlex="25" class="orders dropdown" style="margin-right: 10px;">
             <mat-select placeholder="Pilih Perusahaan" formControlName="company">
-              <mat-option *ngFor="let cr of listCompanies" [value]="cr.id">{{ cr.name }}</mat-option>
+              <mat-option *ngFor="let cr of listCompanies" [value]="cr.id">{{cr.name}}</mat-option>
             </mat-select>
             <mat-error class="mt-8 px-24"
               *ngIf="formPanelMitra.controls['company'].hasError('required') && formPanelMitra.controls['company'].touched">
@@ -122,6 +122,11 @@
           </ngx-datatable-column>
 
           <ngx-datatable-column name="Penjual" prop="name"></ngx-datatable-column>
+          <ngx-datatable-column name="No. Rekening" prop="rekening_number" [sortable]="false">
+            <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+              {{row.rekening_number ? row.rekening_number : '-'}}
+            </ng-template>
+          </ngx-datatable-column>
           <ngx-datatable-column name="No. Ponsel" prop="phone" [sortable]="false">
             <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
               {{row.phone ? row.phone : '-'}}
@@ -130,6 +135,16 @@
           <ngx-datatable-column name="Tipe" prop="classification" [sortable]="false">
             <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
               {{row.classification ? row.classification : '-'}}
+            </ng-template>
+          </ngx-datatable-column>
+          <ngx-datatable-column name="Subcode" prop="virtual_account_subcode" [sortable]="false">
+            <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+              {{row.virtual_account_subcode ? row.virtual_account_subcode : '-'}}
+            </ng-template>
+          </ngx-datatable-column>
+          <ngx-datatable-column name="BIN" prop="bin" [sortable]="false">
+            <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+              {{row.bin ? row.bin : '-'}}
             </ng-template>
           </ngx-datatable-column>
           <ngx-datatable-column name="Kode Divisi" prop="division" [sortable]="false">
