--- a/src/app/pages/virtual-account/virtual-account-panel/index/virtual-account-panel.component.html
+++ b/src/app/pages/virtual-account/virtual-account-panel/index/virtual-account-panel.component.html
@@ -1,6 +1,6 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header [contentTitle]="'Panel Pojok Modal'">
+  <page-content-header [contentTitle]="'Panel Virtual Account'">
     <div class="button-row" fxLayout="row">
       <button style="width: 170px;" mat-raised-button aria-label="Login" type="button"
         [routerLink]="['/virtual-account', 'panel', 'create']">
@@ -13,7 +13,7 @@
   <div class="content p-24" *ngIf="!onLoad">
     <div class="table-wrapper">
       <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table pt-8">
-        <h2 class="pl-8">Panel Pojok Modal</h2>
+        <h2 class="pl-8">Panel Virtual Account</h2>
         <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
           <mat-icon>search</mat-icon>
           <mat-form-field class="is-light tab-search">
@@ -26,9 +26,9 @@
         [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true"
         (page)="setPage($event)" (sort)="onSort($event)" (select)="onSelect($event)">
 
-        <ngx-datatable-column name="Nama Perusahaan" prop="virtual_account_company_name">
+        <ngx-datatable-column name="Nama Perusahaan" prop="virtual_account_company_id">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            <span class="row-name" (click)="directDetail(row)">{{row.virtual_account_company_name}}</span>
+            <span class="row-name" (click)="directDetail(row)">{{listCompanyMap[row.virtual_account_company_id]}}</span>
           </ng-template>
         </ngx-datatable-column>
 
