--- a/src/app/pages/dte/coin-disburstment/index/exchange/coin-disburstment-exchange.component.html
+++ b/src/app/pages/dte/coin-disburstment/index/exchange/coin-disburstment-exchange.component.html
@@ -104,8 +104,7 @@
 <div class="p-16">
   <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="10px"
     fxLayoutAlign="end center" class="p-16 export">
-    <button mat-raised-button type="button" class="is-danger" ngfSelect [(file)]="files" accept=".xls"
-      (fileChange)="onDocUpload($event)">
+    <button mat-raised-button type="button" class="is-danger" (click)="onDocUpload()">
       <mat-icon>arrow_downward</mat-icon> Import XLS
     </button>
     <button mat-raised-button type="button" class="is-danger" (click)="exportExchange()">
