--- a/src/app/pages/b2-bvoucher/create/b2-b-voucher-create.component.html
+++ b/src/app/pages/b2-bvoucher/create/b2-b-voucher-create.component.html
@@ -409,7 +409,7 @@
                 </ngx-datatable-column>
               </ngx-datatable>
               <div class="confirm p-24" fxLayout="row" fxLayoutAlign="center center"
-                *ngIf="isDetail && detailVoucher.status !== 'need-approval' && !permission.approval">
+                *ngIf="isDetail && detailVoucher.status !== 'need-approval' && !permission.b2b_approval">
                 <button mat-raised-button type="button" class="confirmation-button" fxFlex="30" fxFlex.gt-xs="20"
                   (click)="onSavePanelRetailer()">
                   SIMPAN
