hide minimum transaction field

--- a/src/app/pages/virtual-account/virtual-account-company/create/virtual-account-company-create.component.html
+++ b/src/app/pages/virtual-account/virtual-account-company/create/virtual-account-company-create.component.html
@@ -64,7 +64,7 @@
             </mat-form-field>
           </div>
 
-          <div fxLayout="row">
+          <!-- <div fxLayout="row">
             <mat-form-field fxFlex="45" class="is-light form-primary">
               <input matInput type="tel" currencyMask min="0" formControlName="minimum_transaction"
                 placeholder="Minimum Transaksi" numericOnly>
@@ -73,7 +73,7 @@
                 Minimum Transaksi harus diisi
               </mat-error>
             </mat-form-field>
-          </div>
+          </div> -->
 
           <div fxLayout="row">
             <mat-form-field fxFlex="45" class="is-light form-primary">
