export empty data on panel mitra and src

--- a/src/app/pages/virtual-account/virtual-account-panel/virtual-account-panel-import-dialog/virtual-account-panel-import-dialog.component.html
+++ b/src/app/pages/virtual-account/virtual-account-panel/virtual-account-panel-import-dialog/virtual-account-panel-import-dialog.component.html
@@ -37,7 +37,7 @@
         <thead>
           <tr>
             <th nowrap>Penjual</th>
-            <th nowrap *ngIf="dialogData.type === 'wholesaler'">Nomor Rekening</th>
+            <th nowrap *ngIf="dialogData.type === 'wholesaler'">No. Rekening</th>
             <th nowrap>No. Ponsel</th>
             <th nowrap>Kode</th>
             <th nowrap>Tipe</th>
