--- a/src/app/pages/user-management/retailer/index/retailer-index.component.html
+++ b/src/app/pages/user-management/retailer/index/retailer-index.component.html
@@ -21,7 +21,7 @@
       <button mat-raised-button type="button" class="is-danger" (click)="import()">
         <mat-icon>arrow_downward</mat-icon> Import XLS
       </button>
-      <button (click)="export()" mat-raised-button type="button" class="is-danger" disabled>
+      <button (click)="export()" mat-raised-button type="button" class="is-danger">
         <mat-icon>arrow_upward</mat-icon> Export XLS
       </button>
     </div>
