--- a/src/app/pages/sku-management/product-cashier/create/create.component.html
+++ b/src/app/pages/sku-management/product-cashier/create/create.component.html
@@ -38,6 +38,7 @@
                   class="button mb-16"
                   fxLayout="row wrap"
                   fxLayoutAlign="space-between center"
+                  (click)="openDialog()"
                 >
                   <mat-icon class="secondary-text">horizontal_split</mat-icon>
                   <span class="h5 text-center">SCAN BARCODE</span>
@@ -51,8 +52,8 @@
                   />
                   <mat-error
                     *ngIf="
-                      formProductGroup.controls['name'].hasError('required') &&
-                      formProductGroup.controls['name'].touched
+                      formProductGroup.get('name').hasError('required') &&
+                      formProductGroup.get('name').touched
                     "
                   >
                     Nama Produk harus diisi
@@ -70,22 +71,48 @@
                 <mat-form-field fxFlex="100" class="is-light">
                   <input
                     matInput
-                    type="numeric"
+                    type="tel"
                     currencyMask
                     min="0"
                     placeholder="Harga Beli"
                     formControlName="purchase_price"
                   />
+                  <mat-error
+                    *ngIf="
+                      (formProductGroup
+                        .get('purchase_price')
+                        .hasError('required') ||
+                        formProductGroup
+                          .get('purchase_price')
+                          .hasError('min')) &&
+                      formProductGroup.get('purchase_price').touched
+                    "
+                  >
+                    Harga Beli harus diisi
+                  </mat-error>
                 </mat-form-field>
                 <mat-form-field fxFlex="100" class="is-light">
                   <input
                     matInput
-                    type="numeric"
+                    type="tel"
                     currencyMask
                     min="0"
                     placeholder="Harga Jual"
                     formControlName="selling_price"
                   />
+                  <mat-error
+                    *ngIf="
+                      (formProductGroup
+                        .get('selling_price')
+                        .hasError('required') ||
+                        formProductGroup
+                          .get('selling_price')
+                          .hasError('min')) &&
+                      formProductGroup.get('selling_price').touched
+                    "
+                  >
+                    Harga Jual harus diisi
+                  </mat-error>
                 </mat-form-field>
               </div>
             </div>
